[package]
name = "blake3"
version = "0.1.0"
authors = ["Jack Baron <jackmbaron@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "blake3"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
blake3 = "0.1.0"
